cfn-init/4-Wordpress.yml
---
AWSTemplateFormatVersion: '2010-09-09'
Description: Wordpress Application Teststack
Parameters:
  SSHKey:
    Description: A predefined EC2 Key Pair that can be used to access instances on this stack.
    Type: AWS::EC2::KeyPair::KeyName
  SSHRange:
    Description: A range of IP addresses that is allowed to SSH into the instances on this stack.
    Type: String
    Default: 0.0.0.0/0
    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
    ConstraintDescription: Must be a valid IP CIDR range of the form x.x.x.x/x.
  SSHPort:
    Description: The TCP port used to serve SSH to the range of IP addresses specified.
    Type: Number
    Default: 22
    MinValue: 1
    MaxValue: 65535
    ConstraintDescription: Must be a valid TCP port number ( 1 - 65535 )
  HTTPRange:
    Description: A range of IP addresses that is allowed to use the main HTTP service.
    Type: String
    Default: 0.0.0.0/0
    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
    ConstraintDescription: Must be a valid IP CIDR range of the form x.x.x.x/x.
  HTTPPort:
    Description: The TCP port used to serve the main HTTP service.
    Type: Number
    Default: 80
    MinValue: 1
    MaxValue: 65535
    ConstraintDescription: Must be a valid TCP port number ( 1 - 65535 )
  InstanceNum:
    Description: Number of instances in the Auto Scaling Group
    Type: Number
    Default: 2
    MinValue: 1
    MaxValue: 5
    ConstraintDescription: Number of instances must be within the constraints set in the Auto Scaling Group
  DBName:
    Description: Name of the Database
    Type: String
    Default: wordpressdb
    MinLength: 1
    MaxLength: 64
    AllowedPattern: '[a-zA-Z0-9]+'
    ConstraintDescription: Must contain 1 to 64 letters or numbers
  DBUser:
    Description: Database admin account name
    Type: String
    Default: wordpressuser
    MinLength: 1
    MaxLength: 16
    AllowedPattern: '[a-zA-Z0-9]+'
    ConstraintDescription: Must contain 1 to 16 letters or numbers
  DBPass:
    Description: Database admin password
    Type: String
    NoEcho: true
    MinLength: 8
    MaxLength: 41
Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
      - Label: { default: Service Configuration }
        Parameters:
          - HTTPRange
          - HTTPPort
      - Label: { default: Instance Configuration }
        Parameters:
          - InstanceNum
          - SSHKey
          - SSHRange
          - SSHPort
      - Label: { default: Database Configuration }
        Parameters:
          - DBName
          - DBUser
          - DBPass
    ParameterLabels:
      SSHKey:  { default: EC2 Key Pair for SSH }
      SSHRange:  { default: Allowed IP Range for SSH }
      SSHPort: { default: SSH Port }
      InstanceNum: { default: Number of Instances }
      DBName: { default: Database Name }
      DBUser: { default: Database User Name }
      DBPass: { default: Database User Password }
      HTTPRange: { default: Allowed IP Range for the Webserver }
      HTTPPort: { default:  Webserver Port}
Mappings:
  AWSRegionArch2AMI:
    eu-west-1: { image: ami-ebd02392 }
Resources:
  WPNetwork:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 192.168.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      InstanceTenancy: default
  WPSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 192.168.1.0/24
      AvailabilityZone: !Select [ 0, !GetAZs ]
      MapPublicIpOnLaunch: true
      VpcId: !Ref WPNetwork
  WPSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 192.168.2.0/24
      AvailabilityZone: !Select [ 1, !GetAZs ]
      MapPublicIpOnLaunch: true
      VpcId: !Ref WPNetwork
  WPGateway:
    Type: AWS::EC2::InternetGateway
  WPGatewayAttach:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref WPNetwork
      InternetGatewayId: !Ref WPGateway
  WPRoutetable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref WPNetwork
  WPDefaultRoute:
    Type: AWS::EC2::Route
    DependsOn: WPGatewayAttach
    Properties:
      RouteTableId: !Ref WPRoutetable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref WPGateway
  WPRoutetableAttach1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref WPSubnet1
      RouteTableId: !Ref WPRoutetable
  WPRoutetableAttach2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref WPSubnet2
      RouteTableId: !Ref WPRoutetable
  WPSecgrpInstance:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Quick Rule for servers
      VpcId: !Ref WPNetwork
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          SourceSecurityGroupId: !Ref WPSecgrpLoadBalancer
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref SSHRange
  WPSecgrpLoadBalancer:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Quick Rule for loadbalancers
      VpcId: !Ref WPNetwork
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: !Ref HTTPRange
  WPSecgrpDatabase:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Quick Rule for the Database
      VpcId: !Ref WPNetwork
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          SourceSecurityGroupId: !Ref WPSecgrpInstance
  WPDataBase:
    Type: AWS::RDS::DBInstance
    Properties:
      AllocatedStorage: 5
      DBInstanceClass: db.t2.micro
      Engine: mariadb
      EngineVersion: 10.1.23
      PubliclyAccessible: false
      DBName: !Ref DBName
      MasterUsername: !Ref DBUser
      MasterUserPassword: !Ref DBPass
      DBSubnetGroupName: !Ref WPDBSubnetGroup
      VPCSecurityGroups:
        - !Ref WPSecgrpDatabase
  WPDBSubnetGroup:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupDescription: All Subnets (mandatory descripition, wow)
      SubnetIds:
        - !Ref WPSubnet1
        - !Ref WPSubnet2
  WPLoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Type: application
      Scheme: internet-facing
      Subnets:
        - !Ref WPSubnet1
        - !Ref WPSubnet2
      SecurityGroups:
        - !Ref WPSecgrpLoadBalancer
  WPLoadBalancerListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      LoadBalancerArn: !Ref WPLoadBalancer
      Port: 80
      Protocol: HTTP
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref WPLoadBalancerTarget
  WPLoadBalancerTarget:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    DependsOn: WPGatewayAttach
    Properties:
      VpcId: !Ref WPNetwork
      HealthCheckIntervalSeconds: 60
      HealthCheckTimeoutSeconds: 45
      HealthyThresholdCount: 2
      UnhealthyThresholdCount: 3
      Port: 80
      Protocol: HTTP
      HealthCheckPath: /index.php
  WPAutoScalingGroup:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      VPCZoneIdentifier:
        - !Ref WPSubnet1
        - !Ref WPSubnet2
      LaunchConfigurationName: !Ref WPLaunchConf
      MinSize: 1
      MaxSize: 5
      DesiredCapacity: !Ref InstanceNum
      TargetGroupARNs:
        - !Ref WPLoadBalancerTarget
    CreationPolicy:
      ResourceSignal:
        Count: !Ref InstanceNum
        Timeout: PT10M
    UpdatePolicy:
      AutoScalingRollingUpdate:
        MaxBatchSize: 2
        MinInstancesInService: 1
        PauseTime: PT10M
        WaitOnResourceSignals: true
  WPLaunchConf:
    Type: AWS::AutoScaling::LaunchConfiguration
    DependsOn: WPGatewayAttach
    Metadata:
      AWS::CloudFormation::Init:
        config:
          packages:
            yum:
              httpd24: ''
              php70: ''
              mysql56-server: ''
              php70-mysqlnd: ''
          sources:
            /var/www/html: https://wordpress.org/latest.tar.gz
          files:
            /var/www/html/wordpress/wp-config.php:
              content: !Sub |
                <?php
                define('DB_NAME', '${DBName}');
                define('DB_USER', '${DBUser}');
                define('DB_PASSWORD', '${DBPass}');
                define('DB_HOST', '${WPDataBase.Endpoint.Address}:${WPDataBase.Endpoint.Port}');
                define('DB_CHARSET', 'utf8');
                define('DB_COLLATE', '');
                define('AUTH_KEY',         'z= mS!fBTh^xcl=0ulD3MVKmg&#T`LF18%TWN9_$1tH|Ev`JN>Qw9bTBc!c9JJ,0');
                define('SECURE_AUTH_KEY',  '92L)r-^i[zY %:qX`bj|:(.7jtb>?ATf!P6aAcXrf ?jI.4Q+aC:nJm@qU-|4~|C');
                define('LOGGED_IN_KEY',    'D33 /Se0RK+&,Fg|==. <N`]{mxV:rNSLF%Ny(r?/lUQ%Yv/y)r+)i`%jb^LkE(b');
                define('NONCE_KEY',        'x)_7Lnv2_wD^8{6RZeGrWSZAeIx`2$D|Ol9p!KIrUQIc4:DUGIb$axmw>obZ@Hwj');
                define('AUTH_SALT',        'q$$A  DN6tFsCa.]C^a3?Lilg+ko/pQ3D|QrDGO!n}{E#|_$M6-S+GrHufX9D;V@');
                define('SECURE_AUTH_SALT', '6D:L+IhF|z-SnVpaRFj <=QgQ|c; ysS-r^w4Zaei$Xw|JYjUvR+K[E8:!`v9(8:');
                define('LOGGED_IN_SALT',   'J)>kTI|N<T2|8)b%ml4=#3Y.6S;/:;:7qUUm3::r%xAM~wj-<.r3{)+bc!lpb^~%');
                define('NONCE_SALT',       '$1g#9Qwm<9dj;>ZL5F57|$R/F83nA8ioc/4uvJFD/t(QTVl<-`ADFvo=-/~B3e.!');
                $table_prefix  = 'wp_';
                define('WP_DEBUG', false);
                if ( !defined('ABSPATH') )
                    define('ABSPATH', dirname(__FILE__) . '/');
                require_once(ABSPATH . 'wp-settings.php');
              owner: apache
              group: apache
              mode: 0644
            /etc/cfn/cfn-hup.conf:
              content: !Sub |
                [main]
                stack=${AWS::StackName}
                region=${AWS::Region}
                interval=1
              owner: root
              group: root
              mode: 0400
            /etc/cfn/hooks.d/cfn-auto-reloader.conf:
              content: !Sub |
                [cfn-auto-reloader-hook]
                triggers=post.update
                path=Resources.WPLaunchConf.Metadata.AWS::CloudFormation::Init
                action=/opt/aws/bin/cfn-init -v --stack ${AWS::StackName} --resource WPLaunchConf --region ${AWS::Region}
                runas=root
              owner: root
              group: root
              mode: 0400
          services:
            sysvinit:
              httpd:
                enabled: true
                ensureRunning: true
              cfn-hup:
                enabled: true
                ensureRunning: true
                files:
                  - /etc/cfn/cfn-hup.conf
                  - /etc/cfn/hooks.d/cfn-auto-reloader.conf
    Properties:
      ImageId: !FindInMap [ AWSRegionArch2AMI, !Ref 'AWS::Region', image ]
      InstanceType: t2.micro
      SecurityGroups:
        - !Ref WPSecgrpInstance
      KeyName: !Ref SSHKey
      UserData:
        Fn::Base64:
          !Sub |
            #!/bin/bash -xe
            yum update -y aws-cfn-bootstrap
            touch /home/ec2-user/testfile
            /opt/aws/bin/cfn-init -v --stack ${AWS::StackName} --resource WPLaunchConf --region ${AWS::Region}
            /opt/aws/bin/cfn-signal -e $? --stack ${AWS::StackName} --resource WPAutoScalingGroup --region ${AWS::Region}
Outputs:
  LoadBalancerDN:
    Value: !GetAtt WPLoadBalancer.DNSName
  DatabaseInfo:
    Value: !GetAtt WPDataBase.Endpoint.Address
